# bf-engine

./: .gitignore  LICENSE  README.md
bf-application/: allocator.hpp  app-base.cpp  app-base.hpp  app-context.hpp  app-glfw.cpp  app-glfw.hpp  app.hpp  bf-application.vcxproj  bf-application.vcxproj.filters  main.cpp  platform-context.hpp  renderer.cpp  renderer.hpp  tokenizer.hpp
bf-application/cmake/: CMakeLists.txt
bf-application/header/: app.hpp  (+10 more)
bfApplication/: app-base.cpp  app-base.h  app-base.hpp  app-context-gl.cpp  app-context-gl.h  app-context-gl.hpp  app-context.cpp  app-context.hpp  app-gl.cpp  app-gl.h  app-gl.hpp  app.cpp  app.h  app.hpp  bfApplication.vcxproj  bfApplication.vcxproj.filters  gfx-config.h  gl-api.hpp  glfw-context.cpp  glfw-context.h  glfw-context.hpp  glfw-platform-context.cpp  glfw-platform-context.h  glfw-platform-context.hpp  glsl.cpp  glsl.h  glsl.hpp  main.cpp  platform-context.h  platform-context.hpp  platform.hpp  types.hpp
bfFoundation/: allocator.hpp  atomic-stack.hpp  atomic-unix.cpp  atomic-windows.cpp  atomic.h  bfFoundation.vcxproj  bfFoundation.vcxproj.filters  memory-pool.cpp  memory-pool.h  memory-unix.cpp  memory-windows.cpp  memory.h  preprocessor.h
bfMath/: bfMath.vcxproj  bfMath.vcxproj.filters  vector.hpp
sample/: sample-gl.cpp  sample-gl.h  sample.vcxproj
sample-android/: build.gradle
sample-win/: sample-gl.cpp  sample-gl.hpp  sample.sln  sample.vcxproj  sample.vcxproj.filters
vs2013/: sample-gl.cpp  sample-gl.hpp  sample.sln  sample.vcxproj  sample.vcxproj.filters
vs2017/: sample.sln  sample.vcxproj
(+37 files in other folders)
